# dopencl

./: CMakeLists.txt  Dockerfile  README_Linux.txt  build.sh  enter_docker.sh
daemon/src/: dOpenCLd.cpp
dclasio/: CMakeLists.txt
example/: CMakeLists.txt  opencl_example.cc
